2006-05-06  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/iterators.c (igraph_i_eit_create_allfromto) :
	iterator must be of VECTOR type instead of VECTORPTR

2006-05-05  Gabor Csardi  <csardi@kzoo.edu>

	* src/igraph_trie.c (igraph_trie_getkeys) : added

	* src/attributes.h (igraph_attribute_type_t)
	(igraph_i_attribute_record_t, igraph_attribute_elemtype_t) : added
	* src/attributes.c (igraph_i_attribute_add_vertices)
	(igraph_i_attribute_add_edges) : added attr argument
	(igraph_i_attribute_get_info, igraph_i_attribute_has_attr)
	(igraph_i_attribute_get_numeric_graph_attr)
	(igraph_i_attribute_get_string_graph_attr)
	(igraph_i_attribute_get_numeric_vertex_attr)
	(igraph_i_attribute_get_string_vertex_attr)
	(igraph_i_attribute_get_numeric_edge_attr)
	(igraph_i_attribute_get_string_edge_attr) : added	
	* src/type_indexededgelist.c (igraph_add_vertices)
	(igraph_add_edges) : added attr argument
	(igrap_empty) : udated igraph_add_vertices call
	* src/foreign.c (igraph_read_graph_ncol) : attributes readded
	* src/structural_properties.c (igraph_rewire) : updated 
	igraph_add_edges call
	* src/structure_generators.c (igraph_create) : updated 
	igraph_add_vertices and igraph_add_edges calls
	* examples/simple/igraph_add_edges.c : updated
	* examples/simple/igraph_add_vertices.c : updated
	* examples/simple/igraph_delete_vertices.c : updated

	* src/iterators.c (igraph_eit_destroy) : do not destroy vector for
	VECTORPTR iterator type

2006-05-04  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/iterators.c (igraph_eit_destroy) : fixed memory leak
	* src/basic_query.c (igraph_are_connected) : fixed memory leak
	* interfaces/python/* : added working (?) attribute handling

2006-05-03  Gabor Csardi  <csardi@kzoo.edu>

	* src/measure_dynamics.c (igraph_measure_dynamics_id) : two bugs
	corrected

2006-05-02  Gabor Csardi  <csardi@kzoo.edu>

	* src/cocitation.c (igraph_cocitation_real) : bug corrected
	* examples/simple/igraph_cocitation.c : added
