@@ -116,7 +116,7 @@ export(evcent)
 
 # dynamics measurement
 
-export(measure.dynamics.id, measure.dynamics.idage)
+export(measure.dynamics.id, measure.dynamics.idage, measure.dynamics.d.d)
 
 # isomorphism, motifs
 
