@@ -1,3 +1,10 @@
+2006-05-06  Gabor Csardi  <csardi@kzoo.edu>
+
+	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.d.d) :
+	added
+	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_d_d)
+	(R_igraph_measure_dynamics_d_d_st) : added
+
 2006-05-05  Gabor Csardi  <csardi@kzoo.edu>
 
 	* interfaces/R/src/rinterface.c (R_igraph_getListElement) : added
