@@ -1,3 +1,8 @@
+2006-05-06  Gabor Csardi  <csardi@kzoo.edu>
+
+	* src/measure_dynamics.c (igraph_measure_dynamics_d_d)
+	(igraph_measure_dynamics_d_d_st) : added
+
 2006-05-06  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* src/iterators.c (igraph_i_eit_create_allfromto) :
